Update no-decoration styles. Remove opacity change. Inherit colors.

--- a/src/sass/modules/typography/_typography.scss
+++ b/src/sass/modules/typography/_typography.scss
@@ -81,8 +81,12 @@ a {
 
   &.no-decoration {
     text-decoration: none;
-    color: $color-text;
-    font-weight: $font-weight-normal;
+    color: inherit;
+    font-weight: inherit;
+    
+    &:hover, &:focus {
+      opacity: 1;
+    }
   }
 }
 
